tdf#151608: Fix crash in disposing remotecontrol listener

Clearing the listener twice seems to be the problem here, because the WeakComponentImplHelperBase::dispose() tries to access the cleared listener when it was already cleared, causing the crash.

The problem which is fixed by this commit appears when the Impress Remote App is closed, which is connected to a running presentation. So closing the app "kills" the presentation. I think I have seen this also happening, when the connection was closed due to bad wifi. Which also makes sense as the communication thread is getting stopped and the listener will be destroyed.

Change-Id: I3c8fa535cfd4d82c846494f76ffb9ce43ebd606a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141468
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e5aa82b259e35e3976734af38fff643ea28767df)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141851
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>